Setting margin to zero on h3 for iphone, to avoid misalignment of image and achievement descriptions

--- a/public/stylesheets/iphone.css
+++ b/public/stylesheets/iphone.css
@@ -70,6 +70,11 @@ img {
 	-webkit-border-bottom-left-radius: 8px;
 	-webkit-border-bottom-right-radius: 8px;
 }
+
+h3 {
+	margin: 0;
+}
+
 .footer {
     display:none;
 }
